--- a/stules.css
+++ b/stules.css
@@ -117,6 +117,48 @@ body {
     color: var(--branco-principal);
 }
 
+.rodape__lista{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
 
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
+}
+
+.rodape__texto{
+    margin: 1em;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.rodape{
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.lista__link a:hover{
+    color: var(--botao-azul);
+}
+
+.lista__link a:active{
+    color: purple;
+}
+
+.container__botao:hover{
+    background-color: transparent;
+    color: var(--branco-principal);
+    border: 8px solid var(--branco-principal)
+}
+
+.botao_secundario:hover{
+    background-color: var(--botao-azul-efeito);
+    color: var(--branco-principal);
+    border: 8px solid var(--botao-azul-efeito)
+}
 
 
