--- a/stules.css
+++ b/stules.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("../imagens/Background.png");
+    background-image: url("/imagens/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
@@ -87,37 +87,42 @@ body {
     color: var(--cinza-secundario);
 }
 
-.secundario__botao{
+.secundario__botao {
     display: inline-block;
     margin-top: 1em;
 }
 
-.container__descricao{
+.container__descricao {
     padding: 2em;
 }
 
-.dispositivos__lista{
+.dispositivos__lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
-    margin:  5em 0;
+    margin: 5em 0;
 }
 
-.dispositivos{
+.dispositivos {
     text-align: center;
 }
 
-.descricao__titulo{
+.dispositivos__titulo {
     font-size: 48px;
     color: var(--branco-principal);
 }
 
-.lista__item{
+.lista__item {
     font-size: 32px;
     color: var(--branco-principal);
 }
 
-.rodape__lista{
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
+.rodape__lista {
     display: flex;
     justify-content: center;
     list-style-type: none;
@@ -130,35 +135,21 @@ body {
     margin-left: 1em;
 }
 
-.rodape__texto{
-    margin: 1em;
+.rodape__texto {
+    margin: 1em 0;
     color: var(--cinza-secundario);
     font-size: 14px;
 }
 
-.rodape{
-    text-align: center;
-    margin: 5em 3em;
-}
-
-.lista__link a:hover{
+.lista__link a:hover {
     color: var(--botao-azul);
 }
 
-.lista__link a:active{
+.lista__link a:active {
     color: purple;
 }
 
-.container__botao:hover{
-    background-color: transparent;
-    color: var(--branco-principal);
-    border: 8px solid var(--branco-principal)
-}
-
-.botao_secundario:hover{
+.container__botao:hover {
     background-color: var(--botao-azul-efeito);
-    color: var(--branco-principal);
-    border: 8px solid var(--botao-azul-efeito)
+    color: var(--cor-de-fundo);
 }
-
-
